Adding MDAPI and other clean up

--- a/force-mdapi/package.xml
+++ b/force-mdapi/package.xml
@@ -15,7 +15,9 @@
   <types>
     <name>ApexClass</name>
     <members>GenerateEventController</members>
+    <members>GenerateEventControllerTest</members>
     <members>SessionController</members>
+    <members>SessionControllerTest</members>
   </types>
   <types>
     <name>CustomMetadata</name>
